Broken shading with mirror modifier and auto smooth normals while hiding verts. #40014

Closed
opened 2014-05-03 18:01:07 +02:00 by Tomasz Jurczyk · 10 comments

System Information
Linux Mint 16 Petra x64, NVIDIA GeForce GTS 450

Blender Version
blender-2.70-863352d-linux-glibc211-x86_64

Short description of error
Shading of faces look as if they had inverted normals, while:

  • you hide some faces or vertices in edit mode, but only
  • if there is mirror modifier

and and auto smooth normals on.

i'ts not a big problem. I'ts only in edit mode. It does not cause problems when rendering.
I can turn off auto smooth while modeling, but it is inconvenient.

Exact steps for others to reproduce the error

  • subdivide cube
  • delete half
  • subdivide everything (to have more faces to observe shading issue)
  • add mirror modifier
  • shade cube smooth
  • turn on auto smooth normals

hide something in edit mode

**System Information** Linux Mint 16 Petra x64, NVIDIA GeForce GTS 450 **Blender Version** blender-2.70-863352d-linux-glibc211-x86_64 **Short description of error** Shading of faces look as if they had inverted normals, while: - you hide some faces or vertices in edit mode, but only - if there is mirror modifier # and and auto smooth normals on. i'ts not a big problem. I'ts only in edit mode. It does not cause problems when rendering. I can turn off auto smooth while modeling, but it is inconvenient. **Exact steps for others to reproduce the error** - subdivide cube - delete half - subdivide everything (to have more faces to observe shading issue) - add mirror modifier - shade cube smooth - turn on auto smooth normals # hide something in edit mode
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TomaszJurczyk

Added subscriber: @TomaszJurczyk

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed on Win7/64.

blender-2.70-9de24c8-win64: works
blender-2.70-6e9c2d0-win64: crashes when opening the file
blender-2.70-b179647-win64: broken (artifacts)

Confirmed on Win7/64. blender-2.70-9de24c8-win64: works blender-2.70-6e9c2d0-win64: crashes when opening the file blender-2.70-b179647-win64: broken (artifacts)

Added subscriber: @mont29

Added subscriber: @mont29

Thanks for the file, @willi-2! :)

Thanks for the file, @willi-2! :)
Bastien Montagne self-assigned this 2014-05-03 19:08:05 +02:00

Hmm… works OK with VBO, not with legacy mode, this is a bit unexpected… :/

Hmm… works OK with VBO, not with legacy mode, this is a bit unexpected… :/

This issue was referenced by 70303dfefe

This issue was referenced by 70303dfefe4ccd28434eb2804985b2b78652b65b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed by commit 70303dfefe…

Fixed by commit 70303dfefe…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40014
No description provided.