Fix T40014: Broken shading with mirror modifier and auto smooth normals while hiding verts.

Stupid mistake that showed only when there was some hidden faces
(lnors should always be increased... even when the face is not drawned!).